more PR comments * renamed from 40 to 41 since an article was merged during the review